Activate functionally completed, connects through socket.io
